<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_rectangullar_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="8dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_object_photo"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo" />

        <ImageView
            android:background="@drawable/background_rectangullar_white_transparant"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/todo" />

    </FrameLayout>

    <RelativeLayout
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/text_object_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/text_object_country"
            android:layout_below="@+id/text_object_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/negara"
            android:textSize="12sp"
            android:textStyle="bold"/>

    </RelativeLayout>

</LinearLayout>