<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#f0f0f0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/icon_group_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <RatingBar
            android:id="@+id/image_object_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.1"
            style="?android:attr/ratingBarStyleSmall" />

        <TextView
            android:id="@+id/text_object_rate"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rate"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>
    </LinearLayout>


    <View
        android:background="@android:color/black"
        android:layout_width="2dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/icon_group_rate" />


    <LinearLayout
        android:id="@+id/icon_group_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_toEndOf="@id/icon_group_rate"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_object_country"
            android:layout_width="52dp"
            android:layout_height="25dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/text_object_country"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/country"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <View
        android:background="@android:color/black"
        android:layout_width="2dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/icon_group_country"/>

    <LinearLayout
        android:id="@+id/icon_group_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_toEndOf="@id/icon_group_country"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/image_object_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_black_24dp"
            android:contentDescription="@string/todo" />

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/location"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>